assets/css/style.css
/* #region color palette */
:root{
    --dash-lighter: rgba(248, 249, 250, 1);
    --dash-light: rgba(229, 229, 229, 1);
    --dash-notice: rgba(255, 143, 0, 1);
    --dash-dark: rgba(91, 88, 88, 1);
    --dash-sidebar: rgba(5, 30, 52, 1);
    --dash-banner: #1b72e8;
}



/* #endregion color palette */


/* #region debug */

/* .debug header{
    height: 100px;
    background-color: aliceblue;
} */

/* .debug #left-sidebar{
    background-color: lightskyblue;
    border: 1px solid black;
}
 */
/* .debug #top-banner{
    height: 150px;
    border: 1px solid black;
    background-color: lightsalmon;
} */

/* .debug #main-sections{
    background-color: lightgray;
}
 */
/* .debug .left-sections{
    height: 600px;
    border: 1px solid black;
    background-color: aquamarine;
} */

/* .debug .right-sections{
    height: 600px;
    border: 1px solid black;
    background-color: rgb(241, 162, 222);
}
 */
/* .debug .card{
    border: 1px solid black;
    height: 300px;
} */

/* #endregion debug */

/* #region common rules */
body{
    font-family: 'Roboto', sans-serif;
    height: 100vh;
}

#site_main{
    overflow-y: auto;
}

#main-sections{    
    height: 100%;
}

/* #endregion common rules */

/* #region utility */

/* @media screen and (min-width: 768px) {
    .w-md-30{
        width: 30%!important;
    }

    .w-md-20{
        width: 20%!important;
    }
}

 */
/* #endregion utility */


/* #region header */

#site_header{
    background-color: var(--dash-lighter);

    & .nav-center .form-control, .input-group-text{
        background-color: var(--dash-light);
    }

    & .nav-link:has(.fa-bell){
        color: var(--dash-notice);
    }
}

.nav-link:has(.fa-bell)::after{
    display: none;
}

/* #endregion header */

/* #region site-main */

#wrapper{
    padding-top: 4rem;
}

#site_main{
    background-color: var(--dash-lighter);
}

/* #endregion site-main */

/* #region sidebar */


#left-sidebar{
    background-image: url(../img/sidebar-bg.png);
    background-color: var(--dash-sidebar);

    & li:has(.nav-link):hover{
        background-color: rgba(255, 255, 255, 0.384);
    }

    & .settings > .nav-link:hover{
        background-color: rgba(255, 255, 255, 0.384);
    }
}

/* #endregion sidebar */

/* #region top banner */


#top-banner{
    background-color: var(--dash-banner);
}

.badge.rounded-pill.bool-badge{
    background-color:  rgba(5, 30, 52, 0.37);
}

@media screen and (max-width: 991px){
    
    #offcanvasRight{
        width: 100%;
    }
}


@media screen and (min-width: 992px){
    
    #offcanvasRight{
        width: 50%;
    }
}

.new-student > .btn:hover{
    background-color: white;
    
    > i{
        color: black;
    }
}


/* #endregion top banner */


/* #region next-classes-card */

.next-classes thead th:not(:first-of-type), tbody td{
    text-align: center;
}

.next-classes tbody th, td{
    vertical-align: middle;
}

table .btn{
    color: var(--dash-dark);
}

td:has(.btn){
    min-width: 6.5rem;
}

/* #endregion next-classes-card */

/* #region faq */



/* #endregion faq */

/* #region checklist */


/* #endregion checklist */

/* #region chart */

/* #endregion chart */

